--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
 # .env.example
 
-# URL of the Git repository to clone
+# Git repository to clone
 REPO_URL=https://github.com/example/repo.git
 
 # Local directory where the repository will be cloned
 TARGET_DIR=./cloned_repo
 
-# Placeholder for future configurations (e.g., API keys, server URLs)
-API_KEY=your_api_key_here
-SERVER_URL=http://localhost:8000
+# DeepSeek R1 API configuration
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
+DEEPSEEK_API_BASE=https://api.deepseek.com/v1
+
+# MCP server configuration
+MCP_SERVER_URL=http://localhost:8000
