--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
 # URL of the Git repository to clone
+# Git repository to clone
 REPO_URL=https://github.com/criticalstrike18/ReactFrontEnd.git
+
 # Local directory where the repository will be cloned
 TARGET_DIR=./cloned_repo
-# Placeholder for future configurations (e.g., API keys, server URLs)
-API_KEY=sk-29d6b254508e413588b1d98ccbf68cff
-SERVER_URL=http://localhost:8000
+
+# DeepSeek R1 API configuration
+DEEPSEEK_API_KEY=sk-29d6b254508e413588b1d98ccbf68cff
+DEEPSEEK_API_BASE=https://api.deepseek.com/v1
+
+# MCP server configuration
+MCP_SERVER_URL=http://localhost:8000
